{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 27,
  "lineage": "a5262e5a-2f16-4f3a-047b-c8e9e0cfac0d",
  "resources": [
    {
      "module": "module.slackoapp",
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "module.slackoapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124356934321:subnet/subnet-018c75233f1ff577f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 249,
            "cidr_block": "10.0.102.0/24",
            "default_for_az": false,
            "id": "subnet-018c75233f1ff577f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "124356934321",
            "state": "available",
            "tags": {
              "Name": "my-vpc-public-us-east-1c"
            },
            "vpc_id": "vpc-0405b419d771694d8"
          }
        }
      ]
    },
    {
      "module": "module.slackoapp",
      "mode": "managed",
      "type": "aws_instance",
      "name": "mongodb",
      "provider": "module.slackoapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0617c50b76e1c51f6",
            "arn": "arn:aws:ec2:us-east-1:124356934321:instance/i-03c9fa16fcc71548f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03c9fa16fcc71548f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "slacko-app-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d40ffaf4351d20c8",
            "private_dns": "ip-10-0-102-184.ec2.internal",
            "private_ip": "10.0.102.184",
            "public_dns": "ec2-54-147-155-52.compute-1.amazonaws.com",
            "public_ip": "54.147.155.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04139ef87700daf7b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-018c75233f1ff577f",
            "tags": {
              "Name": "Anderson-mongodb",
              "disciplina": "CIA0506",
              "env": "prod"
            },
            "tags_all": {
              "Name": "Anderson-mongodb",
              "disciplina": "CIA0506",
              "env": "prod"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-041273982869e435c",
              "sg-0a31ece64e4bedca5"
            ]
          },
          "dependencies": [
            "module.slackoapp.aws_key_pair.slacko-sshkey",
            "module.slackoapp.data.aws_ami.slacko-app",
            "module.slackoapp.data.aws_subnet.subnet_public"
          ]
        }
      ]
    },
    {
      "module": "module.slackoapp",
      "mode": "managed",
      "type": "aws_instance",
      "name": "slacko-app",
      "provider": "module.slackoapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0617c50b76e1c51f6",
            "arn": "arn:aws:ec2:us-east-1:124356934321:instance/i-014e6679f427e20f2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-014e6679f427e20f2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "slacko-app-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ee40d5fe554f6cf8",
            "private_dns": "ip-10-0-102-76.ec2.internal",
            "private_ip": "10.0.102.76",
            "public_dns": "ec2-18-212-85-27.compute-1.amazonaws.com",
            "public_ip": "18.212.85.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0efac9d1043aa43cf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-018c75233f1ff577f",
            "tags": {
              "Name": "Anderson-slacko-app",
              "disciplina": "CIA0506",
              "env": "prod"
            },
            "tags_all": {
              "Name": "Anderson-slacko-app",
              "disciplina": "CIA0506",
              "env": "prod"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-005f553df4196c1b5",
              "sg-041273982869e435c"
            ]
          },
          "dependencies": [
            "module.slackoapp.aws_key_pair.slacko-sshkey",
            "module.slackoapp.data.aws_ami.slacko-app",
            "module.slackoapp.data.aws_subnet.subnet_public"
          ]
        }
      ]
    },
    {
      "module": "module.slackoapp",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-mongodb",
      "provider": "module.slackoapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124356934321:security-group/sg-0a31ece64e4bedca5",
            "description": "allow Mongodb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0a31ece64e4bedca5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow mongodb",
                "from_port": 27017,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 27017
              }
            ],
            "name": "allow_mongodb",
            "name_prefix": "",
            "owner_id": "124356934321",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Anderson-allowmongodb",
              "disciplina": "CIA0506",
              "env": "prod"
            },
            "tags_all": {
              "Name": "Anderson-allowmongodb",
              "disciplina": "CIA0506",
              "env": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0405b419d771694d8"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.slackoapp",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-slacko",
      "provider": "module.slackoapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124356934321:security-group/sg-005f553df4196c1b5",
            "description": "allow ssh and http port",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow SSH",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-005f553df4196c1b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow SSH",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 80
              }
            ],
            "name": "allow_ssh_http",
            "name_prefix": "",
            "owner_id": "124356934321",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_http"
            },
            "tags_all": {
              "Name": "allow_ssh_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0405b419d771694d8"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}